--- a/components/Keyboard/keyboard.module.css
+++ b/components/Keyboard/keyboard.module.css
@@ -25,7 +25,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  transition: 0.2s;
+  transition: background-color 0.2s;
   transition-delay: 0.8s;
 }
 
