--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,10 @@
   --max-width: 1100px;
   --main-green: #7a9d54;
   --main-light-yellow: #f2ea78;
-  --background-color: #1e1e1e;
-  --main-grey: #dde1c6;
+  --main-grey: #e3e3e3;
+  --background-color: #161616;
   --box-shadow: 0 0px 5px 2px #7a9d54;
+  --border-color: #f2ea7870;
 }
 
 * {
@@ -16,6 +17,7 @@
 html,
 body {
   max-width: 100vw;
+  min-height: 100vh;
   overflow-x: hidden;
   background-color: var(--background-color);
 }
