--- a/components/Keyboard/keyboard.module.css
+++ b/components/Keyboard/keyboard.module.css
@@ -15,7 +15,7 @@
 
   position: relative;
   padding: 0.25rem;
-  border: 1px solid var(--main-light-yellow);
+  border: 1px solid var(--border-color);
   border-radius: 0.25rem;
   color: white;
   font-size: 1rem;
