--- a/app/home.module.css
+++ b/app/home.module.css
@@ -15,6 +15,16 @@
   color: white;
 }
 
+.resultsModal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  width: 100%;
+  text-align: center;
+}
+
 @media (min-width: 768px) {
   .main {
     padding: 2rem;
